WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146558
Instead of requiring ToT UIKIt, check that UI_WEB_TOUCH_EVENT_HAS_IS_POTENTIAL_TAP is defined to 1
https://bugs.webkit.org/show_bug.cgi?id=146558
Summary
Instead of requiring ToT UIKIt, check that UI_WEB_TOUCH_EVENT_HAS_IS_POTENTIA...
Anders Carlsson
Reported
2015-07-02 13:47:58 PDT
Instead of requiring ToT UIKIt, check that UI_WEB_TOUCH_EVENT_HAS_IS_POTENTIAL_TAP is defined to 1
Attachments
Patch
(1.54 KB, patch)
2015-07-02 13:48 PDT
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-07-02 13:48:15 PDT
Created
attachment 256029
[details]
Patch
Anders Carlsson
Comment 2
2015-07-02 14:40:34 PDT
Committed
r186235
: <
http://trac.webkit.org/changeset/186235
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug