Instead of requiring ToT UIKIt, check that UI_WEB_TOUCH_EVENT_HAS_IS_POTENTIAL_TAP is defined to 1 https://bugs.webkit.org/show_bug.cgi?id=146558

Reviewed by Beth Dakin.

* Shared/ios/NativeWebTouchEventIOS.mm:
(WebKit::NativeWebTouchEvent::NativeWebTouchEvent):

Canonical link: https://commits.webkit.org/164647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186235 268f45cc-cd09-0410-ab3c-d52691b4dbfc